Started to set up page headers etc.

--- a/content/_index.html
+++ b/content/_index.html
@@ -1,15 +1,15 @@
 ---
 title: Home
-summary: "Calade: A Hugo theme and R package by Danielle Navarro"
+summary: "EMCR Brain Sciences Website"
 ---
 
 
 
-<div id="calade" class="section level1">
-<h1>Calade</h1>
-<div id="a-hugo-theme-and-r-package-by-danielle-navarro" class="section level3">
-<h3>A Hugo theme and R package by <a href="https://twitter.com/djnavarro">Danielle Navarro</a></h3>
-<p><img src="header/caladown.png" width="150px" style="float:right; padding:15px;"></p>
+<div id="emcr-brain-sciences" class="section level1">
+<h1>EMCR Brain Sciences</h1>
+<div id="background---who-are-we" class="section level3">
+<h3>Background - Who are we?</h3>
+<p><img src="header/profile.png" width="150px" style="float:right; padding:15px;"></p>
 <p><br></p>
 <p>The goal of calade and caladown is to allow R users to create lightweight websites powered by Hugo and is designed to be compatible with both <a href="https://hugodown.r-lib.org/">hugodown</a> and <a href="https://bookdown.org/yihui/blogdown/">blogdown</a>, and allows users to generate graphics that match the visual style of the site via the <a href="https://rstudio.github.io/thematic/">thematic</a> package. There are two components to caladown, a <a href="https://github.com/djnavarro/hugo-calade">Hugo theme</a> and an <a href="https://github.com/djnavarro/caladown">R package</a>. The simplest way to get started is simply to download the R package from GitHub using the following command:</p>
 <pre class="r"><code>remotes::install_github(&quot;djnavarro/caladown&quot;)</code></pre>
