Last of the profile content

--- a/content/newsletter/April-2019/index.html
+++ b/content/newsletter/April-2019/index.html
@@ -70,4 +70,9 @@ header:
 <h2>Grant Opportunities</h2>
 <p>Please <a href="mailto:emcrbsn@brainalliance.org.au">contact</a> the EMCR Network if you would like to advertise grant opportunities here.</p>
 </div>
+<div id="employment-and-other-brain-science-opportunities" class="section level2">
+<h2>Employment and other brain science opportunities</h2>
+<p>Please <a href="mailto:emcrbsn@brainalliance.org.au">contact</a> the EMCR Network if you would like to advertise positions here.</p>
+<p><a href="http://womeninbrainstim.com/"><img src="WomeninBrainStim.png" alt="Women in Brain Stim" /></a></p>
+</div>
 </div>
