--- a/content/newsletter/September-2019/index.html
+++ b/content/newsletter/September-2019/index.html
@@ -98,7 +98,7 @@ header:
 </div>
 <div id="brain-science-emcr-profiles" class="section level2">
 <h2>Brain science EMCR profiles</h2>
-<p>This month we’re profiling …</p>
+<p>This week we’re featuring profiles of two talented EMCR Brain scientists - <a href="/profiles/dr-brenton-hordacre">Dr. Brenton Hordacre</a>, and PhD student <a href="/profiles/isabella-bower">Isabella Bower</a>.</p>
 </div>
 <div id="th-embl-australia-phd-course-student-perspective" class="section level2">
 <h2>6th EMBL Australia PhD Course — student perspective</h2>
