--- a/content/newsletter/June-2019/index.html
+++ b/content/newsletter/June-2019/index.html
@@ -66,5 +66,15 @@ Mostafa and Mayuresh</p>
 </div>
 <div id="brain-science-emcr-profiles" class="section level2">
 <h2>Brain Science EMCR profiles</h2>
+<p>Today we’re profiling two talented EMCR brain researchers, <a href="/profiles/a-prof-tara-hamilton">A/Prof. Tara Hamilton</a> and <a href="/profiles/dr-kristi-griffiths">Dr. Kristi Griffiths</a>.</p>
+</div>
+<div id="grant-opportunities" class="section level2">
+<h2>Grant Opportunities</h2>
+<p>Please <a href="mailto:emcrbsn@brainalliance.org.au">contact</a> the EMCR Network if you would like to advertise grant opportunities here.</p>
+</div>
+<div id="employment-and-other-brain-science-opportunities" class="section level2">
+<h2>Employment and other brain science opportunities</h2>
+<p>Please <a href="mailto:emcrbsn@brainalliance.org.au">contact</a> the EMCR Network if you would like to advertise positions here.</p>
+<p><a href="http://womeninbrainstim.com/"><img src="WomeninBrainStim.png" alt="Women in Brain Stim" /></a></p>
 </div>
 </div>
