--- a/content/newsletter/April-2019/index.html
+++ b/content/newsletter/April-2019/index.html
@@ -1,15 +1,15 @@
 ---
 title: "April 2019 Newsletter"
 type: "post"
-author: ""
+author: "EMCR Brain Science Network Steering Committee"
 date: "2019-04-10"
 slug: april-newsletter
 summary: "In this newsletter we have included a number of profiles of Australian brain EMCRs kicking goals, as well as awesome initiatives getting up and running — like QueersInscience, set up to foster and champion the inclusion of LGBTQIA+ professionals within STEMM organisations. We hope you enjoy being a part of the BSN."
 tags: ["newsletter"]
 header:
   caption: ""
-  image: 'header/banner.png'
-  profile: 'header/profile.png'
+  image: 'header/dti-banner.jpeg'
+  profile: ''
 ---
 
 
