--- a/content/events/Jobs-outside-the-bubble-2/index.html
+++ b/content/events/Jobs-outside-the-bubble-2/index.html
@@ -5,7 +5,7 @@ author: "Deborah Apthorp"
 date: "2021-08-11"
 slug: jobs-outside-the-bubble
 tags: "seminar"
-summary: "This will be the next in our very popular webinar series!"
+summary: "This will be the next in our very popular webinar series, to be held on September 14th from 1-2pm."
 header:
   caption: "Photo by [Kind and Curious](https://unsplash.com/@kindandcurious) on [Unsplash](https://unsplash.com)"
   image: 'header/bubbles.jpeg'
@@ -17,7 +17,20 @@ header:
 <div id="jobs-outside-the-bubble-2---the-second-in-our-seminar-series" class="section level2">
 <h2>Jobs Outside the Bubble 2 - the second in our seminar series</h2>
 <p>Please join us in conversation with two more outstanding brain scientists who have secured jobs outside of the university sector. How did they do it? What is it like outside the bubble? Whether you’re thinking about making a move, or are mentoring someone in this position, this webinar is for you. This promises to be an engaging and informative webinar! Below is the link for registration.</p>
-<p>Chaired by Dr Bernadette Fitzgibbon (Monash University) and A/Prof Hannah Keage (UniSA). More details soon!</p>
+<div id="speakers" class="section level3">
+<h3>Speakers</h3>
+<div class="figure">
+<img src="Melita.png" alt="" />
+<p class="caption"><strong>Melita Giummarra</strong></p>
+</div>
+<p>National Disability Insurance Agency</p>
+<div class="figure">
+<img src="Sin-Ki.png" alt="" />
+<p class="caption"><strong>Sin-Ki Ng</strong></p>
+</div>
+<p>Victoria Police</p>
+<p>Chaired by the Brain Science Network.</p>
 <p>September 14th, 1-2pm (Melbourne/Sydney time)</p>
 <p><a href="https://unisa.zoom.us/webinar/register/WN_lQyBifqRR0aYrxYLnluncA">Register here!</a></p>
+</div>
 </div>
