Added more profiles

--- a/content/steeringcommittee/index.html
+++ b/content/steeringcommittee/index.html
@@ -12,8 +12,7 @@ colorAccent1: "#0000dd"
 colorAccent2: "#8a2be2"
 toc: false
 header:
-  caption: "Image source: UCSB Brain Initiative"
-  image: 'header/mri-banner.jpeg'
+  image: 'header/neuron-banner.png'
   profile: ''
 ---
 
@@ -112,6 +111,11 @@ header:
 <td>Dr Chiara Bortolasci</td>
 <td>Deakin University</td>
 <td><a href="https://www.deakin.edu.au/about-deakin/people/chiara-bortolasci">Chiara Bortolasci</a></td>
+</tr>
+<tr class="even">
+<td>Dr Scott Kiel-Chisholm</td>
+<td>QUT</td>
+<td><a href="https://www.qut.edu.au/about/our-people/academic-profiles/s.kielchisholm">Scott Kiel-Chisholm</a></td>
 </tr>
 </tbody>
 </table>
