--- a/content/events/Jobs-outside-the-bubble-1/index.html
+++ b/content/events/Jobs-outside-the-bubble-1/index.html
@@ -1,5 +1,5 @@
 ---
-title: "Jobs Outside the Bubble"
+title: "Jobs Outside the Bubble 1"
 type: "talk"
 author: "Phillip Ward and Olga Shimoni"
 date: "2021-07-22"
@@ -19,7 +19,6 @@ header:
 <p>Recently, many of you joined us in conversation with two outstanding brain scientists who have secured jobs outside of the university sector. How did they do it? What is it like outside the bubble? Whether you’re thinking about making a move, or are mentoring someone in this position, this webinar is for you. This promised to be an engaging and informative webinar, and indeed it delivered! Below is the link where you can watch it if you missed it.</p>
 <p>Chaired by Dr Bernadette Fitzgibbon (Monash University) and A/Prof Hannah Keage (UniSA)</p>
 <p>22 July 2pm (Melbourne/Sydney time)</p>
-<p><a href="https://unisa.au.panopto.com/Panopto/Pages/Viewer.aspx?id=fb0502c0-3348-4cfb-99a7-ad6d0053ade2">Jobs Outside the Bubble 1</a></p>
 <div class="figure">
 <img src="Phil.png" alt="" />
 <p class="caption">Phillip Ward</p>
@@ -28,4 +27,5 @@ header:
 <img src="Olga.png" alt="" />
 <p class="caption">Olga Shimoni</p>
 </div>
+<p>{{< youtube yWJ1KQJBE8Y>}}</p>
 </div>
