--- a/content/_index.html
+++ b/content/_index.html
@@ -29,9 +29,8 @@ summary: "EMCR Brain Sciences Website"
 <h2>Connect with the Network</h2>
 <p>To find out more about the EMCR Brain Science Network activities, follow <a href="https://twitter.com/emcrbrainau">EMCRBrainAu</a> on Twitter or contact them directly at <a href="mailto:emcrbsn@brainalliance.org.au">emcrbsn@brainalliance.org.au</a></p>
 </div>
-<div id="twitter-feed" class="section level2">
-<h2>Twitter feed</h2>
-<a class="twitter-timeline" href="https://twitter.com/EMCRBrainAu?ref_src=twsrc%5Etfw">Tweets by EMCRBrainAu</a>
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<div id="youtube-channel" class="section level2">
+<h2>YouTube Channel</h2>
+<p><a href="https://www.youtube.com/channel/UCu3yEGOyHUfRrJ7KZP3jahg">Click here to subscribe to outr YouTube channel!</a></p>
 </div>
 </div>
