--- a/content/_index.html
+++ b/content/_index.html
@@ -27,7 +27,8 @@ summary: "EMCR Brain Sciences Website"
 </div>
 <div id="connect-with-the-network" class="section level2">
 <h2>Connect with the Network</h2>
-<p>To find out more about the EMCR Brain Science Network activities, follow <a href="https://twitter.com/emcrbrainau">EMCRBrainAu</a> on Twitter or contact them directly at <a href="mailto:emcrbsn@brainalliance.org.au">emcrbsn@brainalliance.org.au</a></p>
+<p>To find out more about the EMCR Brain Science Network activities, follow <a href="https://twitter.com/emcrbrainau">EMCRBrainAu</a> on Twitter or contact them directly at <a href="mailto:emcrbsn@brainalliance.org.au">emcrbsn@brainalliance.org.au</a>.</p>
+<p>You can also subcribe to our newsletter <a href="https://brainalliance.us19.list-manage.com/subscribe?u=23c38f0be78a8ad9f183170b0&amp;id=64146be720">here</a>!</p>
 </div>
 <div id="youtube-channel" class="section level2">
 <h2>YouTube Channel</h2>
