--- a/content/_index.html
+++ b/content/_index.html
@@ -32,6 +32,6 @@ summary: "EMCR Brain Sciences Website"
 </div>
 <div id="youtube-channel" class="section level2">
 <h2>YouTube Channel</h2>
-<p><a href="https://www.youtube.com/channel/UCu3yEGOyHUfRrJ7KZP3jahg">Click here to subscribe to outr YouTube channel!</a></p>
+<p><a href="https://www.youtube.com/channel/UCu3yEGOyHUfRrJ7KZP3jahg">Click here to subscribe to our YouTube channel!</a></p>
 </div>
 </div>
