Updated Scott's profile

--- a/content/profiles/scottkielchisholm/index.html
+++ b/content/profiles/scottkielchisholm/index.html
@@ -5,7 +5,7 @@ author: "Scott Kiel-Chisholm"
 date: "2021-10-11"
 slug: dr-scott-kiel-chisholm
 tags: "profile"
-summary: "Dr. Scott Kiel-Chisholm is a Lecturer and Academic Lead of the Postgraduate Programs at the School of Law, Faculty of Business and Law at Queensland University of Technology (QUT). He is also a researcher in the Datafication and Automation of Human Life Research Program at the Faculty of Law, QUT, focusing on Regulating Life Sciences, Robotics, Neural Interface and the Law. "
+summary: "Dr. Scott Kiel-Chisholm is a researcher at the School of Law, Faculty of Business and Law at Queensland University of Technology (QUT). He is also a researcher in the Datafication and Automation of Human Life Research Program at the Faculty of Law, QUT, focusing on Regulating Life Sciences, Robotics, Neural Interface and the Law. "
 header:
   caption: ""
   image: ''
@@ -16,7 +16,7 @@ header:
 
 <p>Neural interface systems encompass sophisticated technology that enables integration of the human brain and body with an artificial device. The complexity of the brain and neural system is immense so neuroscientific research is an integral part of the development of neural interface devices. My PhD thesis, titled <em>Civil Liability Challenges for the Law and Neural Interface Devices: Reconceptualising the Law</em>, examined the challenges that the melding of mind and machine through neural interface presents to the existing legal frameworks and determined that, in particular circumstances, the law will require re-evaluation and adaptation.</p>
 <p><img src="Scott.png" /></p>
-<p>I’m a Lecturer and the Academic Lead, Post Graduate Programs at the School of Law, Faculty of Business and Law at Queensland University of Technology (QUT). I’m also a researcher in the Datafication and Automation of Human Life Research Program at the Faculty of Law, QUT focussing on Regulating Life Sciences, Robotics, Neural Interface and the Law.</p>
+<p>I’m a Lecturer and researcher at the School of Law, Faculty of Business and Law at Queensland University of Technology (QUT). I’m also a researcher in the Datafication and Automation of Human Life Research Program at the Faculty of Law, QUT focussing on Regulating Life Sciences, Robotics, Neural Interface and the Law.</p>
 <p>My research continues in neural interface and the law extending beyond the scope of the PhD thesis, including neuroethics, the design and development of neurotechnologies and how the digital and associated automated technologies are affecting, changing or challenging human life. This involves innovative and interdisciplinary collaborative research that enhances the translation of research outcomes into the community.</p>
 <p>Contact Details:</p>
 <p><strong>Dr Scott Kiel-Chisholm | Lecturer | Academic Lead - Postgraduate Programs</strong></p>
