Added YouTube for Jobs Outside the Bubble 3

--- a/content/events/Jobs-outside-the-bubble-3/index.html
+++ b/content/events/Jobs-outside-the-bubble-3/index.html
@@ -31,6 +31,6 @@ How did they do it? What is it like outside the bubble? Whether you’re thinkin
 </div>
 <p>Chaired by the Brain Science Network.</p>
 <p>April 8th, 1-2pm (Melbourne/Sydney time)</p>
-<p><a href="https://unisa.zoom.us/webinar/register/WN_o4VOjUZrSYG_7DJiQXk0tg">Register here!</a></p>
+<p>{{< youtube JPZqAtQjS6Y >}}</p>
 </div>
 </div>
