--- a/content/events/Jobs-outside-the-bubble-4/index.html
+++ b/content/events/Jobs-outside-the-bubble-4/index.html
@@ -2,7 +2,7 @@
 title: "Jobs Outside the Bubble 4"
 type: "talk"
 author: "Deborah Apthorp"
-date: "2022-08-09"
+date: "2022-09-02"
 slug: jobs-outside-the-bubble-4
 tags: "seminar"
 summary: "The fourth in our popular webinar series, which will be held on Friday, September 2nd 2022, from 1-2pm (Melbourne/Sydney time)."
@@ -16,9 +16,9 @@ header:
 
 <div id="jobs-outside-the-bubble-4---the-fourth-in-our-seminar-series" class="section level2">
 <h2>Jobs Outside the Bubble 4 - the fourth in our seminar series</h2>
-<p>Please join us in conversation with two outstanding brain scientists who have secured jobs outside of the university sector.</p>
-<p>How did they do it? What is it like outside the bubble? Whether you’re thinking about making a move, or are mentoring someone in this position, this webinar is for you.</p>
-<p>This promises to be an engaging and informative webinar.</p>
+<p>Recently some of you joined us us in conversation with two outstanding brain scientists who have secured jobs outside of the university sector.</p>
+<p>How did they do it? What is it like outside the bubble? Whether you’re thinking about making a move, or are mentoring someone in this position, this webinar series is for you.</p>
+<p>For those of you who missed it, the YouTube recording is embedded below!</p>
 <div id="speakers" class="section level3">
 <h3>Speakers</h3>
 <div class="figure">
@@ -31,6 +31,6 @@ header:
 </div>
 <p>Chaired by the <a href="https://emcrbrainsciencenetwork.com.au/">Brain Science Network</a>.</p>
 <p>Friday September 2nd, 1-2pm (Melbourne/Sydney time)</p>
-<p><a href="https://unisa.zoom.us/webinar/register/WN_MOoEfwI6TC-QLemw-jvngA">Register in advance for this webinar here</a></p>
+<p>{{< youtube Fhi19t58Bxk >}}</p>
 </div>
 </div>
