Updated strategic plan

--- a/content/strategicplan/index.html
+++ b/content/strategicplan/index.html
@@ -1,5 +1,5 @@
 ---
-title: "Strategic Plan 2019-2022"
+title: "Strategic Plan 2023-2026"
 type: "post"
 summary: "EMCR Brain Sciences Strategic Plan"
 author: ""
@@ -13,7 +13,6 @@ colorAccent2: "#8a2be2"
 toc: false
 header:
   image: 'header/brain-banner.png'
-
 ---
 
 
@@ -22,8 +21,8 @@ header:
 <h1>EMCR Brain Sciences Network Strategic Plan</h1>
 <table>
 <colgroup>
-<col width="15%" />
-<col width="84%" />
+<col width="18%" />
+<col width="81%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -38,7 +37,7 @@ header:
 </tr>
 <tr class="even">
 <td><strong>Values</strong></td>
-<td>To promote diversity, inclusivity, engagement, collaboration and integrity across Australian brain science</td>
+<td>To promote <em>diversity, inclusivity, engagement, collaboration and integrity</em> across Australian brain science</td>
 </tr>
 <tr class="odd">
 <td><strong>Stakeholders</strong></td>
@@ -46,45 +45,51 @@ header:
 </tr>
 <tr class="even">
 <td></td>
-<td>Australian Brain Alliance; Australian Academy of Science; Brain Science EMCR groups; Australian Universities, Research Institutes, Government and Funding Bodies; Media and the public</td>
+<td>Australian Brain Alliance; Australian Academy of Science; Brain Science EMCR groups; Australian Universities, Research Institutes, Government and Funding Bodies; Media, Industry and the Public</td>
 </tr>
 </tbody>
 </table>
 <table>
 <colgroup>
-<col width="8%" />
-<col width="27%" />
-<col width="29%" />
-<col width="33%" />
+<col width="20%" />
+<col width="22%" />
+<col width="30%" />
+<col width="26%" />
 </colgroup>
 <thead>
 <tr class="header">
-<th>Imperatives</th>
-<th>Establish a vibrant, diverse, innovative and interdisciplinary network that supports EMCRs in the brain sciences.</th>
-<th>Provide a platform that breaks down existing structural barriers between the brain science disciplines from discovery to technology and translation</th>
-<th>Shape the national policy relevant to brain science, advocate for EMCRs, and provide the tools for EMCRs to advocate for themselves</th>
+<th><strong>Imperatives </strong></th>
+<th>Fostering a vibrant, diverse, innovative and interdisciplinary network that supports EMCRs in the brain sciences</th>
+<th>Providing a platform that breaks down existing structural barriers between the brain science disciplines from discovery to technology and translation</th>
+<th>Shaping the national policy relevant to brain science, advocate for EMCRs, and provide the tools for EMCRs to advocate for themselves</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
 <td><strong>Initiatives</strong></td>
-<td>Grow our state-based symposia series</td>
-<td>Develop an online membership registry to highlight expertise and resources</td>
-<td>Engage in broad consultation to identify the needs of our members</td>
+<td>Inclusion of unrepresented groups on the EMCR BSN Steering Committee</td>
+<td>Create opportunities to extend national and international networks by collaborating with other brain science EMCR organisations</td>
+<td>Facilitate broad consultation to identify the needs of our members</td>
 </tr>
 <tr class="even">
 <td></td>
-<td>Extend national and international networks by collaborating with other brain science EMCR organisations</td>
-<td>Create opportunities for national and international experiences in brain science</td>
+<td>Identify strategies to directly address the broader issues of diversity and representation</td>
+<td>Enable exchanges between industry and academia</td>
 <td>Represent our members on issues raised by stakeholders</td>
 </tr>
 <tr class="odd">
 <td></td>
-<td>Enhance our social media presence and provide our quarterly newsletter</td>
-<td>Enable exchanges between industry and academia</td>
+<td>Maintain and create opportunities to grow our online symposia series and social media presence</td>
+<td></td>
 <td>Empower EMCRs within brain science to advocate to government and within the workplace</td>
 </tr>
 <tr class="even">
+<td></td>
+<td>—————</td>
+<td>—————-</td>
+<td>———————-</td>
+</tr>
+<tr class="odd">
 <td><strong>Outcomes</strong></td>
 <td>An internationally leading and innovative brain sciences sector for EMCRs in Australia</td>
 <td>A strong collaborative brain science network bridging disciplines to accelerate discovery and translation</td>
@@ -94,8 +99,8 @@ header:
 </table>
 <table>
 <colgroup>
-<col width="9%" />
-<col width="90%" />
+<col width="22%" />
+<col width="77%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -104,6 +109,10 @@ header:
 </tr>
 </thead>
 <tbody>
+<tr class="odd">
+<td></td>
+<td></td>
+</tr>
 </tbody>
 </table>
 </div>
