Removed Twitter feed, updated Steering Committee membership list, etc.

--- a/content/_index.html
+++ b/content/_index.html
@@ -1,6 +1,8 @@
 ---
 title: Home
 summary: "EMCR Brain Sciences Website"
+header:
+  image: 'header/ABA-EMCR-BSN-banner.png'
 ---
 
 
@@ -10,9 +12,9 @@ summary: "EMCR Brain Sciences Website"
 <div id="background---who-are-we" class="section level2">
 <h2>Background - Who are we?</h2>
 <p>The Early- and Mid-Career Researcher (EMCR) Brain Science Network aims to establish a platform for early-to-mid career brain scientists to develop into future leaders and to drive Australian brain science forward.</p>
-<div class="figure">
-<img src="header/BSN-close-crop.png" alt="" />
-<p class="caption">The founding members at our first meeting</p>
+<div class="float">
+<img src="header/BSN-close-crop.png" alt="The founding members at our first meeting" />
+<div class="figcaption">The founding members at our first meeting</div>
 </div>
 <p>The EMCR Brain Science Network was established in December of 2017 with the help of seed funding from the <a href="https://www.science.org.au/supporting-science/awards-and-opportunities/theo-murphy-initiative-australia">Theo Murphy Initiative</a>.</p>
 </div>
