--- a/content/events/Jobs-outside-the-bubble-3/index.html
+++ b/content/events/Jobs-outside-the-bubble-3/index.html
@@ -9,7 +9,6 @@ summary: "The third in our popular webinar series, which will be held on April 8
 header:
   caption: "Photo by [Kind and Curious](https://unsplash.com/@kindandcurious) on [Unsplash](https://unsplash.com)"
   image: 'header/bubbles.jpeg'
-  profile: ''
 ---
 
 
@@ -21,13 +20,13 @@ How did they do it? What is it like outside the bubble? Whether you’re thinkin
 <p>This promises to be an engaging and informative webinar.</p>
 <div id="speakers" class="section level3">
 <h3>Speakers</h3>
-<div class="figure">
-<img src="Luke.png" alt="" />
-<p class="caption"><strong>Luke Schneider (Clinical psychologist)</strong></p>
+<div class="float">
+<img src="Luke.png" alt="Luke Schneider (Clinical psychologist)" />
+<div class="figcaption"><strong>Luke Schneider (Clinical psychologist)</strong></div>
 </div>
-<div class="figure">
-<img src="Patrick.png" alt="" />
-<p class="caption"><strong>Patrick Goodbourn (firefighter)</strong></p>
+<div class="float">
+<img src="Patrick.png" alt="Patrick Goodbourn (firefighter)" />
+<div class="figcaption"><strong>Patrick Goodbourn (firefighter)</strong></div>
 </div>
 <p>Chaired by the Brain Science Network.</p>
 <p>April 8th, 1-2pm (Melbourne/Sydney time)</p>
