--- a/content/events/Jobs-outside-the-bubble-4/index.html
+++ b/content/events/Jobs-outside-the-bubble-4/index.html
@@ -9,7 +9,6 @@ summary: "The fourth in our popular webinar series, which will be held on Friday
 header:
   caption: ''
   image: 'header/bubbles.jpeg'
-  profile: ''
 ---
 
 
@@ -21,13 +20,13 @@ header:
 <p>For those of you who missed it, the YouTube recording is embedded below!</p>
 <div id="speakers" class="section level3">
 <h3>Speakers</h3>
-<div class="figure">
-<img src="Sabrina.png" alt="" />
-<p class="caption"><strong>Sabrina Sghirripa (Human Performance Scientist - Defence Science and Technology Group)</strong></p>
+<div class="float">
+<img src="Sabrina.png" alt="Sabrina Sghirripa (Human Performance Scientist - Defence Science and Technology Group)" />
+<div class="figcaption"><strong>Sabrina Sghirripa (Human Performance Scientist - Defence Science and Technology Group)</strong></div>
 </div>
-<div class="figure">
-<img src="Felicity.png" alt="" />
-<p class="caption"><strong>Felicity Bigelow (Scientific Officer)</strong></p>
+<div class="float">
+<img src="Felicity.png" alt="Felicity Bigelow (Scientific Officer)" />
+<div class="figcaption"><strong>Felicity Bigelow (Scientific Officer)</strong></div>
 </div>
 <p>Chaired by the <a href="https://emcrbrainsciencenetwork.com.au/">Brain Science Network</a>.</p>
 <p>Friday September 2nd, 1-2pm (Melbourne/Sydney time)</p>
